--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
 
           <!-- Instructions Modal -->
           <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
-            <!-- ... your modal content unchanged ... -->
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="instructionsModalLabel">ব্যবহার নির্দেশনা</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <!-- (Your original instruction content goes here) -->
+                  <ol class="ps-3">
+                    <li class="mb-3"><strong>PDF সাইজ:</strong> …</li>
+                    <li class="mb-3"><strong>ইমেজ সাইজ:</strong> …</li>
+                    <li class="mb-3"><strong>এক্সেল:</strong> …</li>
+                    <li class="mb-3"><strong>ফোন:</strong> …</li>
+                    <li class="mb-3"><strong>ইনভয়েস সিলেকশন:</strong> …</li>
+                    <li class="mb-3"><strong>ডাউনলোড:</strong> …</li>
+                  </ol>
+                  <p class="text-info"><strong>ভিডিও নির্দেশিকা:</strong> <a href="YOUTUBE_URL" target="_blank">টিউটোরিয়াল দেখুন</a></p>
+                  <p class="text-info"><strong>পরামর্শ:</strong> …</p>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Paper size hybrid UI -->
@@ -56,18 +76,44 @@
             </div>
           </div>
           <div id="customSizeFields" class="mb-3 row d-none">
-            <!-- ... custom size inputs unchanged ... -->
+            <div class="col-sm-4">
+              <label for="paperWidth" class="form-label">Width</label>
+              <input type="number" id="paperWidth" class="form-control" placeholder="Width">
+            </div>
+            <div class="col-sm-4">
+              <label for="paperHeight" class="form-label">Height</label>
+              <input type="number" id="paperHeight" class="form-control" placeholder="Height">
+            </div>
+            <div class="col-sm-4">
+              <label for="paperUnit" class="form-label">Unit</label>
+              <select id="paperUnit" class="form-select">
+                <option value="mm" selected>mm</option>
+                <option value="in">in</option>
+                <option value="pt">pt</option>
+              </select>
+            </div>
           </div>
 
           <!-- Form Inputs -->
           <form id="labelForm">
-            <!-- ... header, footer, excel inputs ... -->
-            <div id="invoiceSelection" class="mb-2 hidden">
-              <!-- ... invoice select ... -->
+            <div class="mb-2">
+              <label for="headerInput" class="form-label">Header Image</label>
+              <input type="file" id="headerInput" class="form-control" accept="image/*">
             </div>
-            <button type="button" id="generateBtn" class="btn btn-primary w-100">
-              Generate Labels
-            </button>
+            <div class="mb-2">
+              <label for="footerInput" class="form-label">Footer Image</label>
+              <input type="file" id="footerInput" class="form-control" accept="image/*">
+            </div>
+            <div class="mb-2">
+              <label for="excelInput" class="form-label">Excel File</label>
+              <input type="file" id="excelInput" class="form-control" accept=".xls,.xlsx">
+            </div>
+            <div id="invoiceSelection" class="mb-2 hidden">
+              <label for="invoiceSelect" class="form-label">Select Invoices (optional)</label>
+              <select id="invoiceSelect" class="form-select" multiple size="8"></select>
+              <div class="form-text">Hold Ctrl/Cmd to select multiple or leave blank for all.</div>
+            </div>
+            <button type="button" id="generateBtn" class="btn btn-primary w-100">Generate Labels</button>
           </form>
           <div id="alertPlaceholder" class="mt-3"></div>
         </div>
@@ -87,8 +133,7 @@
     });
 
     // Grab jsPDF safely
-    const jspdfGlobal = window.jspdf
-      || (window.jsPDF && { jsPDF: window.jsPDF });
+    const jspdfGlobal = window.jspdf || (window.jsPDF && { jsPDF: window.jsPDF });
     if (!jspdfGlobal) {
       console.error('🚨 jsPDF did not load!');
       alert('Library error: jsPDF failed to load.');
@@ -109,9 +154,30 @@
       alertPlaceholder.append(wrap);
     }
 
-    // Excel parsing
+    // Parse Excel
     document.getElementById('excelInput').addEventListener('change', async e => {
-      // ... your existing excel parsing code unchanged ...
+      const file = e.target.files[0];
+      if (!file) return;
+      try {
+        const buff = await readFileAsArrayBuffer(file);
+        const wb = XLSX.read(buff, { type: 'array' });
+        let last = {};
+        parsedRows = XLSX.utils
+          .sheet_to_json(wb.Sheets[wb.SheetNames[0]], { defval: '' })
+          .map(r => {
+            ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount']
+              .forEach(k => r[k] = r[k] || last[k] || '');
+            last = { ...r };
+            return r;
+          });
+        invoiceList = [...new Set(parsedRows.map(r => String(r['Invoice']).trim()))].sort();
+        const sel = document.getElementById('invoiceSelect');
+        sel.innerHTML = '';
+        invoiceList.forEach(inv => sel.append(new Option(inv, inv)));
+        document.getElementById('invoiceSelection').classList.remove('hidden');
+      } catch(err) {
+        showAlert('Error parsing Excel: ' + err.message);
+      }
     });
 
     // Generate PDFs
@@ -119,7 +185,6 @@
       console.log('👉 Generate Labels clicked');
       alertPlaceholder.innerHTML = '';
 
-      // Basic validations
       const headerFile = document.getElementById('headerInput').files[0];
       const footerFile = document.getElementById('footerInput').files[0];
       if (!headerFile || !footerFile) {
@@ -129,7 +194,7 @@
         return showAlert('Upload and parse Excel first.');
       }
 
-      // Paper size logic (unchanged) …
+      // Paper size logic
       let [w, h, unit] = document.getElementById('presetSize').value.split(',');
       if (w === 'custom') {
         w = parseFloat(document.getElementById('paperWidth').value);
@@ -144,7 +209,7 @@
       const zip = new JSZip();
 
       const opts = Array.from(document.getElementById('invoiceSelect')
-                              .selectedOptions).map(o => o.value);
+                          .selectedOptions).map(o => o.value);
       const targets = opts.length ? opts : invoiceList;
 
       for (const inv of targets) {
@@ -152,7 +217,6 @@
         if (!group.length) continue;
 
         const doc = new jsPDF({ unit, format: [w, h] });
-        // try loading your custom font without killing the script
         try {
           doc.addFont('MangoDream-normal.ttf', 'MangoDream', 'normal');
           doc.setFont('MangoDream', 'normal');
@@ -161,11 +225,33 @@
         }
         doc.setFontSize(10);
 
-        // Header & footer images
+        // Images
         doc.addImage(headerUrl, 'PNG', 0, 0, w, w * (30 / 101.6));
         doc.addImage(footerUrl, 'PNG', 0, h - (49 * (h / 101.6)), w, h * (49 / 101.6));
 
-        // … rest of your PDF text logic unchanged …
+        // Text content…
+        let y = w * (30 / 101.6) + 11;
+        const left = 10;
+        doc.text(`Invoice #: ${inv}`, left, y); y += 7;
+        const name = titleCase(group[0]['First Name'] + ' ' + group[0]['Last Name']);
+        doc.text(`Name: ${name}`, left, y); y += 7;
+        let raw = String(group[0]['Phone']).replace(/\D/g, '');
+        if (raw.startsWith('880')) raw = raw.slice(3);
+        else if (raw.startsWith('0')) raw = raw.slice(1);
+        if (raw.length > 10) raw = raw.slice(-10);
+        doc.text(`Phone: 0${raw}`, left, y); y += 7;
+        const fullAddr = `Address: ${titleCase(group[0]['Address'])}`;
+        const addrLines = doc.splitTextToSize(fullAddr, w - left * 2);
+        doc.text(addrLines, left, y); y += addrLines.length * 7;
+        const notes = group.map(r => r['NOTE'] || '').join(' ').toLowerCase();
+        const total = notes.includes('paid') ? '0' : String(Math.round(group[0]['Order Total Amount']));
+        doc.text(`Total: Tk ${total}`, left, y); y += 7;
+        doc.text('Items:', left, y); y += 7;
+        group.forEach(r => {
+          const item = r['Items'] ? titleCase(r['Items']) : '';
+          const qty  = r['Quantity'] ? ` (${r['Quantity']})` : '';
+          if (item) { doc.text(`- ${item}${qty}`, left, y); y += 7; }
+        });
 
         zip.file(`${inv}.pdf`, doc.output('blob'));
       }
@@ -174,7 +260,7 @@
       saveAs(blob, 'shipping_labels.zip');
     });
 
-    // FileReader helpers (unchanged) …
+    // Helpers
     function readFileAsDataURL(file) {
       return new Promise(res => {
         const reader = new FileReader();
